Updated all of CA6

--- a/main/html/content-areas/CA6 - Data/subtopic/6.1-data-information-and-knowledge/6.1-data-information-and-knowledge.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.1-data-information-and-knowledge/6.1-data-information-and-knowledge.html
@@ -28,7 +28,186 @@
     </form>
 
     <main>
-        
+        <h2 class = "heading">Subtopic 6.1: Data, Information & Knowledge</h2>
+
+        <h4>6.1.1 Know and understand the differences and relationships between:</h4>
+
+        <h4>Data</h4>
+        <p>Data refers to raw, unprocessed facts and figures which, by themselves, have no inherent meaning. They can be numbers, words, symbols, or measurements collected from different sources. Without context or interpretation, data cannot be used effectively for decision-making.</p>
+        <div class="example"><strong>Example:</strong> Individual numbers such as 34, 102, or words like “red” and “Monday,” as well as raw sensor readings from a device.</div>
+        <ul>
+            <h4>Characteristics:</h4>
+            <ul>
+                <li>Unprocessed and unorganised.</li>
+                <li>Requires processing before it becomes useful.</li>
+                <li>Often stored in databases or files before analysis.</li>
+            </ul>
+        </ul>
+
+        <h4>Information</h4>
+        <p>Information is data that has been processed, structured, or organised in a way that makes it meaningful and useful. Information provides context and answers basic questions such as who, what, where, and when. It allows humans and systems to make more informed decisions.</p>
+        <div class="example"><strong>Example:</strong> Instead of simply saying “34,” information would be: “The classroom temperature is 34°C.” Another example: “102 students attended the lecture.”</div>
+        <ul>
+            <h4>Characteristics:</h4>
+            <ul>
+                <li>Provides meaning and context.</li>
+                <li>Useful for reporting and decision-making.</li>
+                <li>Often communicated through charts, tables, or summaries.</li>
+            </ul>
+        </ul>
+
+        <h4>Knowledge</h4>
+        <p>Knowledge is the understanding and insights derived from interpreting information and combining it with human experience or expertise. Knowledge helps people understand patterns, causes, and implications, allowing them to make predictions, solve problems, and take action.</p>
+        <div class="example"><strong>Example:</strong> Knowing that 34°C is too hot for a classroom, so students’ concentration may decline. Or recognising that attendance data shows a pattern of higher absences on Mondays, which could inform scheduling changes.</div>
+        <ul>
+            <h4>Characteristics:</h4>
+            <ul>
+                <li>Answers the “how” and “why” questions.</li>
+                <li>Supports decision-making and problem-solving.</li>
+                <li>Combines information with human judgement and experience.</li>
+            </ul>
+        </ul>
+
+        <div class="example"><strong>Relationship:</strong> Data → Information → Knowledge. Data becomes information when processed and given meaning. Information leads to knowledge when applied with experience and understanding.</div>
+
+
+        <h4>6.1.2 Know and understand sources for generating data:</h4>
+
+        <h4>Humans: surveys, forms</h4>
+        <p>Human-generated data comes from direct input provided by people. This can include surveys, questionnaires, and forms where individuals record their opinions, preferences, or demographic information. It is valuable because it captures personal perspectives and choices that machines cannot infer automatically.</p>
+        <div class="example"><strong>Example:</strong> A customer satisfaction survey or an online registration form.</div>
+        <ul>
+            <h4>Pros:</h4>
+            <ul>
+                <li>Can capture opinions, thoughts, and personal preferences.</li>
+                <li>Useful for gathering qualitative insights.</li>
+            </ul>
+            <h4>Cons:</h4>
+            <ul>
+                <li>May be biased if questions are poorly designed.</li>
+                <li>Responses may be incomplete, inaccurate, or dishonest.</li>
+            </ul>
+        </ul>
+
+        <h4>Artificial Intelligence (AI) / Machine Learning</h4>
+        <p>AI and machine learning models generate or interpret data by recognising patterns and making predictions. These systems often rely on large amounts of historical data to train their algorithms. However, they are prone to biases if the training data is not diverse or representative.</p>
+        <div class="example"><strong>Danger of feedback loop:</strong> If AI is trained on biased data, it produces biased outcomes. Over time, these outcomes reinforce the same bias, creating a cycle of unfair or inaccurate results.</div>
+
+        <h4>Sensors</h4>
+        <p>Sensors measure physical conditions in the environment and convert them into data. This data is highly valuable because it is continuous, real-time, and often objective.</p>
+        <ul>
+            <li><strong>Temperature:</strong> Used in weather stations or thermostats.</li>
+            <li><strong>Accelerometer:</strong> Used in smartphones and fitness trackers.</li>
+            <li><strong>Vibration:</strong> Used in earthquake detection systems.</li>
+            <li><strong>Sound:</strong> Used in voice recognition or audio monitoring.</li>
+            <li><strong>Light:</strong> Used in automatic lighting systems.</li>
+            <li><strong>Pressure:</strong> Used in car tire monitoring systems.</li>
+        </ul>
+
+        <h4>Internet of Things (IoT)</h4>
+        <p>IoT refers to everyday objects that are connected to the internet and continuously collect and transmit data. These smart devices create vast amounts of useful data for analysis and automation.</p>
+        <ul>
+            <li>Smart thermostats that adjust heating and cooling.</li>
+            <li>Smart lights controlled remotely via apps.</li>
+            <li>Security cameras that provide live surveillance.</li>
+            <li>GPS trackers that monitor location in real time.</li>
+        </ul>
+
+        <h4>Transactions</h4>
+        <p>Transactional data is generated whenever a customer makes a purchase, subscribes, or interacts with an organisation. It provides structured, valuable insights into behaviour and preferences.</p>
+        <ul>
+            <li>Customer details (name, email, address).</li>
+            <li>Membership or subscription records.</li>
+            <li>Time and date of purchases.</li>
+            <li>Items in shopping baskets or carts.</li>
+        </ul>
+
+
+        <h4>6.1.3 Know and understand ethical data practices and the metrics to determine the value of data:</h4>
+
+        <h4>Ethical data practices</h4>
+        <p>Responsible organisations ensure that data collection, storage, and use respect the rights of individuals. Ethics in data is essential for trust, compliance with laws, and long-term sustainability.</p>
+        <ul>
+            <li><strong>Consent:</strong> Users must know and agree to data collection practices.</li>
+            <li><strong>Privacy:</strong> Organisations must safeguard sensitive personal data.</li>
+            <li><strong>Transparency:</strong> Clear communication about how data is used.</li>
+            <li><strong>Security:</strong> Strong protection against breaches and misuse.</li>
+            <li><strong>Fairness:</strong> Avoiding practices that discriminate or cause harm.</li>
+        </ul>
+
+        <h4>Metrics to determine value of data</h4>
+        <ul>
+            <li><strong>Quantity:</strong> A larger dataset can provide deeper insights, but too much may complicate analysis and storage.</li>
+            <li><strong>Timeframe:</strong> Data’s value depends on how current it is; outdated data can lead to incorrect decisions.</li>
+            <li><strong>Source:</strong> Data from reliable and verified sources is more valuable than unverified data.</li>
+            <li><strong>Veracity:</strong> The trustworthiness and accuracy of data. High-veracity data reduces errors and improves confidence in decisions.</li>
+        </ul>
+
+
+        <h4>6.1.4 Understand how organisations use data and information:</h4>
+
+        <h4>Analysis to identify patterns</h4>
+        <p>Organisations analyse large volumes of data to uncover trends and correlations. These insights guide decision-making, product development, and customer service improvements.</p>
+        <div class="example"><strong>Example:</strong> A retailer analysing seasonal sales patterns to stock more ice cream during hot months.</div>
+
+        <h4>System performance analysis</h4>
+        <p>Monitoring system metrics ensures that IT infrastructure remains reliable and efficient.</p>
+        <ul>
+            <li><strong>Load:</strong> Amount of demand being placed on the system.</li>
+            <li><strong>Outage:</strong> Monitoring downtime and recovery times.</li>
+            <li><strong>Throughput:</strong> Amount of data processed per second.</li>
+            <li><strong>Status:</strong> Overall performance and health indicators.</li>
+        </ul>
+
+        <h4>User monitoring</h4>
+        <p>Tracking user behaviour helps with security, resource allocation, and improving user experience.</p>
+        <ul>
+            <li>Login and logout records.</li>
+            <li>Resources accessed, such as files or applications.</li>
+            <li>Frequency and timing of use.</li>
+        </ul>
+
+        <h4>Targeted marketing</h4>
+        <p>Customer data enables personalised advertising and recommendations, increasing sales opportunities.</p>
+        <ul>
+            <li>Offering discounts to frequent shoppers.</li>
+            <li>Upselling related or premium products.</li>
+        </ul>
+
+        <h4>Threat/opportunity assessment</h4>
+        <p>Data helps organisations identify risks and areas for growth.</p>
+        <ul>
+            <li><strong>Threats:</strong> Competitor activity, cybersecurity vulnerabilities, regulatory compliance risks.</li>
+            <li><strong>Opportunities:</strong> New markets, service improvements, customer expansion.</li>
+        </ul>
+
+
+        <h4>6.1.5 Interrelationships and suitability in digital software development</h4>
+
+        <p>In digital software development, data, information, and knowledge are interlinked. Each step in this chain impacts the quality of the final software product.</p>
+        <ul>
+            <li><strong>Data:</strong> Collected from users, sensors, or transactions.</li>
+            <li><strong>Information:</strong> Processed into structured reports and dashboards.</li>
+            <li><strong>Knowledge:</strong> Applied by developers and decision-makers to design and improve solutions.</li>
+        </ul>
+
+        <h4>Judging suitability:</h4>
+        <p>The suitability of data and information must be evaluated before use in development projects.</p>
+        <ul>
+            <li><strong>Accuracy:</strong> Incorrect data results in unreliable software.</li>
+            <li><strong>Relevance:</strong> Data should match the goals of the software project.</li>
+            <li><strong>Timeliness:</strong> Current data is essential for valid decisions.</li>
+            <li><strong>Ethics:</strong> Data must be gathered and applied in a legal and fair manner.</li>
+        </ul>
+
+        <h4>Applications in software development:</h4>
+        <ul>
+            <li>User feedback data is analysed to refine user interfaces and improve usability.</li>
+            <li>System monitoring data ensures high availability and reliability.</li>
+            <li>Market and competitor data informs which new features to prioritise.</li>
+            <li>If the data is biased, incomplete, or unreliable, the final product may fail to meet user needs or ethical standards.</li>
+        </ul>
+
     </main>
     
     <arrow-Nav>
