--- a/main/html/content-areas/CA6 - Data/subtopic/6.12-data-analysis-tools/6.12-data-analysis-tools.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.12-data-analysis-tools/6.12-data-analysis-tools.html
@@ -28,7 +28,100 @@
     </form>
  
     <main>
-        
+        <h2 class="heading">Subtopic 6.12: Data Analysis Tools</h2>
+
+        <h3 class="sub-heading">6.12.1 Know Data Analysis Tools and Understand Their Purpose and When They Are Used</h3>
+
+        <h4>Storing Big Data for Analysis</h4>
+        <ul>
+            <h5>Data Warehouse</h5>
+            <ul>
+                <p><strong>Purpose:</strong> A centralized repository for structured data from multiple sources.</p>
+                <p><strong>When Used:</strong> Consolidating historical data for analysis and reporting.</p>
+                <p><strong>Example:</strong> A retail company storing 10 years of sales data to analyze trends in customer purchases.</p>
+            </ul>
+
+            <h5>Data Lake</h5>
+            <ul>
+                <p><strong>Purpose:</strong> Stores structured, semi-structured, and unstructured data at scale.</p>
+                <p><strong>When Used:</strong> Keeping raw data for future analysis, including machine learning projects.</p>
+                <p><strong>Example:</strong> A social media company storing millions of user posts, videos, and images for sentiment analysis and behavior studies.</p>
+            </ul>
+
+            <h5>Data Mart</h5>
+            <ul>
+                <p><strong>Purpose:</strong> A subset of a data warehouse focused on a specific department or function.</p>
+                <p><strong>When Used:</strong> Providing a specific team fast access to relevant data.</p>
+                <p><strong>Example:</strong> A marketing team accessing only customer interactions and campaign results.</p>
+            </ul>
+        </ul>
+
+        <h4>Analysis of Data</h4>
+        <ul>
+            <h5>Data Mining</h5>
+            <ul>
+                <p><strong>Purpose:</strong> Discover patterns, correlations, and trends using statistical and AI techniques.</p>
+                <p><strong>When Used:</strong> Identifying hidden patterns in historical data for predictive insights.</p>
+                <p><strong>Example:</strong> A bank analyzing transactions to detect fraudulent behavior patterns.</p>
+            </ul>
+
+            <h5>Reporting</h5>
+            <ul>
+                <p><strong>Purpose:</strong> Organizes data into readable formats like dashboards, charts, and summaries.</p>
+                <p><strong>When Used:</strong> Operational monitoring, management updates, or regulatory compliance.</p>
+                <p><strong>Example:</strong> Monthly sales reports tracking performance against targets.</p>
+            </ul>
+        </ul>
+
+        <h4>Use of Business Intelligence Gained Through Analysis</h4>
+        <ul>
+            <h5>Financial Planning and Analysis</h5>
+            <ul>
+                <p><strong>Purpose:</strong> Helps forecast revenue, budget expenses, and optimize financial resources.</p>
+                <p><strong>When Used:</strong> Strategic planning, investment decisions, and risk management.</p>
+                <p><strong>Example:</strong> Using historical sales and market trends to forecast next year’s revenue.</p>
+            </ul>
+
+            <h5>Customer Relationship Management (CRM)</h5>
+            <ul>
+                <h6>Customer Data Analytics</h6>
+                <ul>
+                    <p><strong>Purpose:</strong> Analyze customer behavior, preferences, and trends.</p>
+                    <p><strong>When Used:</strong> Targeted marketing, product recommendations, and loyalty programs.</p>
+                    <p><strong>Example:</strong> E-commerce analyzing purchase history to recommend products.</p>
+                </ul>
+
+                <h6>Communications</h6>
+                <ul>
+                    <p><strong>Purpose:</strong> Personalize communication with customers based on insights.</p>
+                    <p><strong>When Used:</strong> Email campaigns, promotions, or service updates.</p>
+                    <p><strong>Example:</strong> Sending personalized discount codes to customers based on buying patterns.</p>
+                </ul>
+            </ul>
+        </ul>
+
+        <h3 class="sub-heading">6.12.2 Understand the Interrelationships Between Data Analysis Tools and the Scale of Data</h3>
+        <ul>
+            <p><strong>Small-Scale Data:</strong> Can be stored and analyzed using simple databases and spreadsheets; reporting tools are usually sufficient.</p>
+            <p><strong>Medium-Scale Data:</strong> Requires data warehouses and more advanced reporting or simple data mining techniques.</p>
+            <p><strong>Large-Scale / Big Data:</strong> Needs data lakes, cloud storage, and advanced data mining or AI-based analytics.</p>
+
+            <p><strong>Key Interrelationships:</strong></p>
+            <ul>
+                <li><strong>Data Storage ↔ Analysis:</strong> Efficient storage allows faster and more accurate analysis.</li>
+                <li><strong>Analysis ↔ Business Intelligence:</strong> Insights guide financial, operational, and customer-related decisions.</li>
+                <li><strong>Scale of Data ↔ Tool Choice:</strong> Larger and more diverse datasets require scalable storage and advanced analytics tools.</li>
+            </ul>
+
+            <p><strong>Example Flow:</strong></p>
+            <ul>
+                <li>Raw data from multiple sources → stored in a <strong>data lake</strong>.</li>
+                <li>Relevant structured data extracted → moved to a <strong>data warehouse</strong>.</li>
+                <li>Department-specific insights → accessed via <strong>data marts</strong>.</li>
+                <li>Analytics (data mining + reporting) → used for <strong>BI</strong> decisions in finance and CRM.</li>
+            </ul>
+        </ul>
+
     </main>
     
     <arrow-Nav>
