--- a/main/html/content-areas/CA6 - Data/subtopic/6.2-methods-of-transforming-data/6.2-methods-of-transforming-data.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.2-methods-of-transforming-data/6.2-methods-of-transforming-data.html
@@ -28,7 +28,62 @@
     </form>
  
     <main>
-        
+        <h2 class = "heading">Subtopic 6.2: Methods of Transforming Data</h2>
+        <p>When working with data, it often needs to be transformed before it becomes useful. Data transformation refers to changing the structure, format, or values of data to make it easier to interpret, analyse, or process. Transformation ensures that raw data is converted into meaningful information for decision-making, problem solving, or further applications.</p>
+
+        <h3 class="sub-heading">6.2.1 Know and understand methods of transforming data:</h3>
+
+        <h4>Manipulating</h4>
+        <ul>
+            <p>Manipulating data means changing its form, structure, or arrangement without altering its core meaning.</p>
+            <div class="example"><strong>Example:</strong> Sorting a customer database alphabetically or merging two spreadsheets into one dataset.</div>
+            <h4>Benefits:</h4>
+            <ul>
+                <li>Makes data easier to read and compare.</li>
+                <li>Removes unnecessary or irrelevant information.</li>
+                <li>Prepares datasets for deeper analysis.</li>
+            </ul>
+            <h4>Drawbacks:</h4>
+            <ul>
+                <li>Risk of human error when manually sorting or filtering.</li>
+                <li>Over-manipulation may cause important details to be lost.</li>
+            </ul>
+        </ul>
+
+        <h4>Analysing</h4>
+        <ul>
+            <p>Analysing data means examining it carefully to identify patterns, trends, or insights.</p>
+            <div class="example"><strong>Example:</strong> Using sales data to calculate averages, spot seasonal trends, or compare customer groups.</div>
+            <h4>Benefits:</h4>
+            <ul>
+                <li>Helps turn raw data into valuable knowledge.</li>
+                <li>Supports decision-making with evidence-based insights.</li>
+                <li>Can reveal hidden relationships and correlations.</li>
+            </ul>
+            <h4>Drawbacks:</h4>
+            <ul>
+                <li>Poor analysis techniques may lead to misleading conclusions.</li>
+                <li>Requires statistical or analytical skills that may not always be available.</li>
+            </ul>
+        </ul>
+
+        <h4>Processing</h4>
+        <ul>
+            <p>Processing data means using systematic steps to convert raw input into meaningful output. It usually involves multiple operations, often automated by computer systems.</p>
+            <div class="example"><strong>Example:</strong> Applying formulas to calculate profit margins in a financial dataset or cleaning survey responses before creating a report.</div>
+            <h4>Benefits:</h4>
+            <ul>
+                <li>Ensures data is accurate and consistent.</li>
+                <li>Automates repetitive tasks to save time and reduce error.</li>
+                <li>Creates structured datasets that are ready for use in applications such as reporting or machine learning.</li>
+            </ul>
+            <h4>Drawbacks:</h4>
+            <ul>
+                <li>Requires technical resources, software, or programming knowledge.</li>
+                <li>Errors in processing steps can cascade and affect the entire dataset.</li>
+            </ul>
+        </ul>
+
     </main>
     
     <arrow-Nav>
