--- a/main/html/content-areas/CA6 - Data/subtopic/6.3-data-taxonomy/6.3-data-taxonomy.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.3-data-taxonomy/6.3-data-taxonomy.html
@@ -28,7 +28,81 @@
     </form>
  
     <main>
+        <h2 class = "heading">Subtopic 6.3: Data Taxonomy</h2>
         
+        <h3 class="sub-heading">6.3.1 Understand the different categories of data, their purpose, and how they are classified as quantitative or qualitative:</h3>
+        <ul>
+            <p><strong>Quantitative data:</strong> Data that can be measured and expressed numerically. Used for statistical analysis, calculations, and objective comparisons.</p>
+            <ul>
+                <li>Example: Age, height, weight, temperature, income.</li>
+            </ul>
+            <p><strong>Qualitative data:</strong> Descriptive data that cannot be directly measured numerically. Used to capture characteristics, opinions, or experiences.</p>
+            <ul>
+                <li>Example: Colours, emotions, interview transcripts, product reviews.</li>
+            </ul>
+        </ul>
+
+        <h3 class="sub-heading">6.3.2 Understand the definition and purpose of structured data, and why quantitative data is considered structured:</h3>
+        <ul>
+            <p>Structured data is organised in a predefined format, such as tables, spreadsheets, or databases, making it easy to store, search, filter, and analyse.</p>
+            <div class="example"><strong>Example:</strong> Customer records with fields for name, age, and phone number.</div>
+            <ul>
+                <li>Benefit: Quantitative data fits naturally, enabling automated analysis and reporting.</li>
+                <li>Drawback: Rigid format may not accommodate descriptive or multimedia data.</li>
+            </ul>
+        </ul>
+
+        <h3 class="sub-heading">6.3.3 Understand the definition and purpose of unstructured data, and why qualitative data is usually unstructured:</h3>
+        <ul>
+            <p>Unstructured data does not follow a predefined format and often includes rich descriptive information, multimedia, or text, making it more flexible but harder to process automatically.</p>
+            <div class="example"><strong>Example:</strong> Emails, photos, videos, social media posts.</div>
+            <ul>
+                <li>Benefit: Captures detailed context and human insights that structured data cannot.</li>
+                <li>Drawback: Requires transformation or processing tools to analyse effectively.</li>
+            </ul>
+        </ul>
+
+        <h3 class="sub-heading">6.3.4 Understand the different representations of quantitative data including discrete, continuous, and categorical values:</h3>
+        <ul>
+            <p><strong>Discrete values:</strong> Numerical values that can only take specific numbers.</p>
+            <ul>
+                <li>Example: Number of students in a class.</li>
+            </ul>
+            <p><strong>Continuous values:</strong> Numerical values that can take any value within a range.</p>
+            <ul>
+                <li>Example: Height in centimeters (e.g., 165.4 cm).</li>
+            </ul>
+            <p><strong>Categorical values:</strong> Numerical values representing categories or groups rather than quantities.</p>
+            <ul>
+                <li>Example: 1 = Male, 2 = Female; 0 = No, 1 = Yes.</li>
+            </ul>
+        </ul>
+
+        <h3 class="sub-heading">6.3.5 Understand the properties of qualitative data, how it is stored, retrieved, and codified into structured formats:</h3>
+        <ul>
+            <p>Qualitative data is usually treated as a single object and can be codified into structured data for analysis.</p>
+            <ul>
+                <li>Benefit: Preserves rich descriptive information for deeper insight.</li>
+                <li>Benefit: Can be transformed into structured formats (e.g., coding interview responses).</li>
+            </ul>
+            <div class="example"><strong>Example:</strong> Tagging images with keywords or categorising survey responses into themes.</div>
+        </ul>
+
+        <h3 class="sub-heading">6.3.6 Understand the interrelationships between data categories, structures, and transformations, and evaluate their suitability in digital software development:</h3>
+        <ul>
+            <p>Quantitative data is typically structured, making it easy to process and analyse. Qualitative data is often unstructured but can be transformed into structured formats for software applications and analytics.</p>
+            <ul>
+                <li>Quantitative → Structured → Automated analysis and reporting.</li>
+                <li>Qualitative → Unstructured → Provides rich insights but requires processing tools.</li>
+                <li>Transformation bridges unstructured and structured data, e.g., sentiment analysis, image recognition, or tagging.</li>
+            </ul>
+            <p>Judgement examples:</p>
+            <ul>
+                <li>Banking app: Structured quantitative data for balances, transactions, and reporting is most suitable.</li>
+                <li>Social media platform: Unstructured qualitative data for posts, images, and comments must be transformed for moderation and analytics.</li>
+            </ul>
+        </ul>
+
     </main>
     
     <arrow-Nav>
