--- a/main/html/content-areas/CA6 - Data/subtopic/6.7-data-dimensions-and-maintenance/6.7-data-dimensions-and-maintenance.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.7-data-dimensions-and-maintenance/6.7-data-dimensions-and-maintenance.html
@@ -28,6 +28,113 @@
     </form>
  
     <main>
+       <h2 class="heading">Subtopic 6.7: Data Dimensions and Maintenance</h2>
+
+        <h3 class="sub-heading">6.7.1 Know the definitions of the six Vs (dimensions) and understand their impact</h3>
+
+        <h4>Volume</h4>
+        <ul>
+            <p><strong>Definition:</strong> The amount of data generated and stored.</p>
+            <p><strong>Impact:</strong> Large volumes require scalable storage solutions and efficient processing tools. Example: Social media platforms generate terabytes of data daily.</p>
+        </ul>
+
+        <h4>Variety</h4>
+        <ul>
+            <p><strong>Definition:</strong> Different types of data, including structured, semi-structured, and unstructured.</p>
+            <p><strong>Impact:</strong> Diverse data types require specialized methods to gather and process. Example: Text, images, videos, sensor readings, and transaction logs.</p>
+        </ul>
+
+        <h4>Variability</h4>
+        <ul>
+            <p><strong>Definition:</strong> The inconsistency of data flow and meaning over time.</p>
+            <p><strong>Impact:</strong> Makes standardization difficult and requires adaptable storage and processing systems. Example: Seasonal trends in customer purchase patterns.</p>
+        </ul>
+
+        <h4>Velocity</h4>
+        <ul>
+            <p><strong>Definition:</strong> The speed at which data is generated and processed.</p>
+            <p><strong>Impact:</strong> High-velocity data demands real-time processing. Example: Stock market feeds or streaming sensor data.</p>
+        </ul>
+
+        <h4>Veracity</h4>
+        <ul>
+            <p><strong>Definition:</strong> The accuracy, trustworthiness, and quality of data.</p>
+            <p><strong>Impact:</strong> Low veracity data can lead to poor decisions; requires validation and verification. Example: User-entered survey data may contain errors.</p>
+        </ul>
+
+        <h4>Value</h4>
+        <ul>
+            <p><strong>Definition:</strong> The usefulness of data for decision-making and business outcomes.</p>
+            <p><strong>Impact:</strong> Helps prioritize storage and processing resources. Example: Customer purchase history analyzed for targeted marketing.</p>
+        </ul>
+
+        <h3 class="sub-heading">6.7.2 Definition of Big Data and its multiple dimensions</h3>
+        <ul>
+            <p><strong>Definition:</strong> Extremely large datasets too complex for traditional tools.</p>
+            <p><strong>Multiple dimensions:</strong> Includes volume, variety, velocity, variability, veracity, and value, affecting how data is collected, stored, maintained, and analyzed.</p>
+            <p><strong>Example:</strong> A global e-commerce company managing millions of transactions per day across multiple platforms.</p>
+        </ul>
+
+        <h3 class="sub-heading">6.7.3 Impact of each dimension on data gathering and maintenance</h3>
+        <ul>
+            <p><strong>Volume:</strong> Requires scalable collection tools and efficient storage.</p>
+            <p><strong>Variety:</strong> Needs integration of different data formats.</p>
+            <p><strong>Variability:</strong> Demands adaptable storage and processing.</p>
+            <p><strong>Velocity:</strong> Requires real-time pipelines and fast updates.</p>
+            <p><strong>Veracity:</strong> Continuous cleansing, validation, and verification.</p>
+            <p><strong>Value:</strong> Prioritizes storage and maintenance for high-value data.</p>
+        </ul>
+
+        <h3 class="sub-heading">6.7.4 Data quality assurance methods and their purpose</h3>
+
+        <h4>Validation</h4>
+        <ul>
+            <p><strong>Definition:</strong> Ensuring data meets defined rules or criteria.</p>
+            <p><strong>Purpose:</strong> Prevents incorrect data entry. Example: Ensuring a date field contains valid dates.</p>
+        </ul>
+
+        <h4>Verification</h4>
+        <ul>
+            <p><strong>Definition:</strong> Confirming data is correct and consistent with the source.</p>
+            <p><strong>Purpose:</strong> Detects errors or mismatches. Example: Cross-checking customer info with official documents.</p>
+        </ul>
+
+        <h4>Reliability</h4>
+        <ul>
+            <p><strong>Definition:</strong> Ensures data consistently represents reality.</p>
+            <p><strong>Purpose:</strong> Supports confidence in decisions. Example: Sensor readings reflect actual temperature.</p>
+        </ul>
+
+        <h4>Consistency</h4>
+        <ul>
+            <p><strong>Definition:</strong> Data is uniform across datasets or systems.</p>
+            <p><strong>Purpose:</strong> Prevents conflicts between copies. Example: Customer email stored the same way in all databases.</p>
+        </ul>
+
+        <h4>Integrity</h4>
+        <ul>
+            <p><strong>Definition:</strong> Data is complete, accurate, and protected from unauthorized changes.</p>
+            <p><strong>Purpose:</strong> Maintains trustworthiness. Example: Database constraints prevent duplicate IDs.</p>
+        </ul>
+
+        <h4>Redundancy</h4>
+        <ul>
+            <p><strong>Definition:</strong> Duplication of data for backup and reliability.</p>
+            <p><strong>Purpose:</strong> Protects against data loss. Example: Cloud backups and mirrored servers.</p>
+        </ul>
+
+        <h3 class="sub-heading">6.7.5 Factors affecting data maintenance</h3>
+        <ul>
+            <p><strong>Time:</strong> Data can become obsolete; frequent updates are necessary. Example: Financial reports must be current.</p>
+            <p><strong>Skills:</strong> Trained personnel are needed for maintenance and quality assurance. Example: Data engineers and analysts.</p>
+            <p><strong>Cost:</strong> Storage, backup, and cleaning incur expenses. Example: Cloud storage and real-time processing pipelines.</p>
+        </ul>
+
+        <h3 class="sub-heading">6.7.6 Interrelationships and judgements in digital software development</h3>
+        <ul>
+            <p><strong>Interrelationships:</strong> Volume requires automation; velocity demands real-time verification; variety impacts consistency and integrity; veracity drives validation and reliability; value prioritizes important datasets.</p>
+            <p><strong>Judgements:</strong> Decide which datasets are worth maintaining based on value and veracity, determine quality assurance levels, balance costs, time, and skills. Example: Only reliable and relevant customer data is maintained for a recommendation engine.</p>
+        </ul>
         
     </main>
     
