--- a/main/html/content-areas/CA6 - Data/subtopic/6.8-data-systems/6.8-data-systems.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.8-data-systems/6.8-data-systems.html
@@ -28,7 +28,120 @@
     </form>
  
     <main>
-        
+        <h2 class="heading">Subtopic 6.8: Data Systems</h2>
+
+        <h3 class="sub-heading">6.8.1 Know the definition of data wrangling and understand its purpose and when it is used</h3>
+        <ul>
+            <p><strong>Definition:</strong> Data wrangling, or data munging, is the process of cleaning, transforming, and preparing raw data so that it is in a usable format for analysis or reporting.</p>
+            <p><strong>Purpose:</strong> Ensures data quality, usability, and reliability for analysis, reporting, and decision-making.</p>
+            <p><strong>When it is used:</strong> Before analysis, when combining data from multiple sources, or preparing data for automation and machine learning.</p>
+            <p><strong>Example:</strong> Standardizing sales data from multiple stores that may have inconsistent formats such as "$100" vs "100 USD".</p>
+        </ul>
+
+        <h3 class="sub-heading">6.8.2 Know and understand the purpose of each step of data wrangling</h3>
+        <h4>Structure</h4>
+        <ul>
+            <p>Organize data into logical formats like tables or databases to make it easier to work with and analyze.</p>
+            <p>Example: Customer data arranged into columns for name, address, email, and phone number.</p>
+        </ul>
+        <h4>Clean</h4>
+        <ul>
+            <p>Remove or correct inaccurate, duplicate, or irrelevant data to ensure reliability.</p>
+            <p>Example: Correcting invalid dates or removing repeated entries.</p>
+        </ul>
+        <h4>Validate</h4>
+        <ul>
+            <p>Check data against rules or expected patterns to confirm correctness and consistency.</p>
+            <p>Example: Ensuring phone numbers have the correct number of digits or emails follow standard formats.</p>
+        </ul>
+        <h4>Enrich</h4>
+        <ul>
+            <p>Add additional useful information to improve the value of data.</p>
+            <p>Example: Adding geographic data to customer addresses for better analysis.</p>
+        </ul>
+        <h4>Output</h4>
+        <ul>
+            <p>Export clean and structured data in formats ready for reporting, dashboards, or analysis.</p>
+            <p>Example: Preparing a dataset for sales analysis in Excel or for feeding into a machine learning model.</p>
+        </ul>
+
+        <h3 class="sub-heading">6.8.3 Know and understand the purpose of each core function of a data system</h3>
+        <h4>Input</h4>
+        <ul>
+            <p>Capturing data from users, sensors, or other systems. Accuracy here impacts the entire system.</p>
+            <p>Example: Entering sales orders or survey responses.</p>
+        </ul>
+        <h4>Search</h4>
+        <ul>
+            <p>Retrieve specific data efficiently from large datasets.</p>
+            <p>Example: Searching for all sales in a particular region for last month.</p>
+        </ul>
+        <h4>Save</h4>
+        <ul>
+            <p>Store data securely for future use.</p>
+            <p>Example: Saving patient records in a hospital database.</p>
+        </ul>
+        <h4>Integrate</h4>
+        <ul>
+            <p>Combine multiple datasets from different sources to create a unified view.</p>
+            <p>Example: Merging online and in-store sales data.</p>
+        </ul>
+        <h4>Organise (Index)</h4>
+        <ul>
+            <p>Structuring and labeling data to allow efficient search and retrieval.</p>
+            <p>Example: Indexing a library database by author, title, and publication year.</p>
+        </ul>
+        <h4>Output</h4>
+        <ul>
+            <p>Deliver data in a usable format for reports, dashboards, or other systems.</p>
+        </ul>
+        <h4>Feedback Loop</h4>
+        <ul>
+            <p>Use outputs to improve inputs and system processes.</p>
+            <p>Example: Adjusting input rules after detecting frequent data entry errors.</p>
+        </ul>
+
+        <h3 class="sub-heading">6.8.4 Know the types of data entry errors and understand how and why they occur</h3>
+        <h4>Transcription Errors</h4>
+        <ul>
+            <p>Typing mistakes when transferring data from one source to another, caused by fatigue or distraction.</p>
+            <p>Example: Typing “1023” instead of “1032”.</p>
+        </ul>
+        <h4>Transposition Errors</h4>
+        <ul>
+            <p>Switching the order of digits or letters, leading to inaccuracies.</p>
+            <p>Example: Entering “57” instead of “75”.</p>
+        </ul>
+
+        <h3 class="sub-heading">6.8.5 Know and understand methods to avoid data entry errors</h3>
+        <ul>
+            <li><strong>Validation of user input:</strong> System checks input against rules to prevent incorrect entries.</li>
+            <li><strong>Verification by double entry:</strong> Entering data twice and comparing to detect errors.</li>
+            <li><strong>Drop-down menus:</strong> Limits user options to reduce typing errors.</li>
+            <li><strong>Pre-filled data entry boxes:</strong> Auto-populated fields reduce manual entry.</li>
+        </ul>
+
+        <h3 class="sub-heading">6.8.6 Know and understand the factors that impact data entry</h3>
+        <ul>
+            <p><strong>Time needed to create screens:</strong> Longer design time can impact overall project schedules.</p>
+            <p><strong>Expertise needed to create screens:</strong> Skilled personnel ensure effective and user-friendly forms.</p>
+            <p><strong>Time needed to enter the data:</strong> Longer entry times can lead to fatigue and errors.</p>
+        </ul>
+
+        <h3 class="sub-heading">6.8.7 Understand the relationship between factors that impact data entry and data quality and make judgements about the suitability of methods to reduce data entry errors in digital software development</h3>
+        <ul>
+            <p>Poorly designed screens or rushed data entry reduce data quality.</p>
+            <p>Methods like drop-down menus, pre-filled fields, and validation improve accuracy.</p>
+            <p>Double-entry verification is suitable for high-risk or critical data.</p>
+        </ul>
+
+        <h3 class="sub-heading">6.8.8 Understand the relationship between factors that impact implementation of data entry and make judgements about the suitability of implementing data entry in digital software development</h3>
+        <ul>
+            <p>Implementation factors include development time, complexity, and expertise required.</p>
+            <p>Simple data entry forms are easier to implement, while complex validation improves accuracy but requires more resources.</p>
+            <p>Good planning balances accuracy, efficiency, and cost for high-quality data entry systems.</p>
+        </ul>
+
     </main>
     
     <arrow-Nav>
