--- a/main/html/content-areas/CA6 - Data/subtopic/6.9-data-visualisation/6.9-data-visualisation.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.9-data-visualisation/6.9-data-visualisation.html
@@ -28,7 +28,102 @@
     </form>
  
     <main>
-        
+        <h2 class="heading">Subtopic 6.9: Data Visualisation</h2>
+
+        <h3 class="sub-heading">6.9.1 Know and understand data visualisation formats and when they are used</h3>
+
+        <h4>Graphs</h4>
+        <ul>
+            <p><strong>Definition:</strong> Graphs are visual representations of numerical data, showing relationships, trends, or patterns.</p>
+            <p><strong>Common types:</strong> Line graphs, bar graphs, scatter plots.</p>
+            <p><strong>When used:</strong></p>
+            <ul>
+                <li>Line graphs: show trends over time.</li>
+                <li>Bar graphs: compare categories.</li>
+                <li>Scatter plots: show correlations between two variables.</li>
+            </ul>
+        </ul>
+
+        <h4>Charts</h4>
+        <ul>
+            <p><strong>Definition:</strong> Charts simplify complex data into digestible pieces.</p>
+            <p><strong>Common types:</strong> Pie charts, column charts, area charts.</p>
+            <p><strong>When used:</strong></p>
+            <ul>
+                <li>Pie charts: show proportions of a whole.</li>
+                <li>Column charts: compare values across categories.</li>
+                <li>Area charts: emphasize volume or quantity changes over time.</li>
+            </ul>
+        </ul>
+
+        <h4>Tables</h4>
+        <ul>
+            <p><strong>Definition:</strong> Tables organise data into rows and columns for precise reading and reference.</p>
+            <p><strong>When used:</strong></p>
+            <ul>
+                <li>Present exact numbers.</li>
+                <li>Compare multiple variables side by side.</li>
+                <li>Best for detailed datasets where precision is important.</li>
+            </ul>
+        </ul>
+
+        <h4>Reports</h4>
+        <ul>
+            <p><strong>Definition:</strong> Reports are structured documents presenting data and analysis, often combining text, tables, and visuals.</p>
+            <p><strong>When used:</strong></p>
+            <ul>
+                <li>Summarise findings for stakeholders.</li>
+                <li>Provide context and explanations alongside data.</li>
+                <li>Ideal for formal decision-making.</li>
+            </ul>
+        </ul>
+
+        <h4>Dashboards</h4>
+        <ul>
+            <p><strong>Definition:</strong> Dashboards are interactive visual displays that provide real-time data insights in a concise, user-friendly format.</p>
+            <p><strong>When used:</strong></p>
+            <ul>
+                <li>Monitor key performance indicators (KPIs).</li>
+                <li>Track multiple data sources at once.</li>
+                <li>Useful for managers or teams needing quick updates.</li>
+            </ul>
+        </ul>
+
+        <h4>Infographics</h4>
+        <ul>
+            <p><strong>Definition:</strong> Infographics combine data, images, and text to tell a story.</p>
+            <p><strong>When used:</strong></p>
+            <ul>
+                <li>Communicate complex information quickly.</li>
+                <li>Engage general audiences with visual storytelling.</li>
+                <li>Ideal for marketing, education, or awareness campaigns.</li>
+            </ul>
+        </ul>
+
+        <h3 class="sub-heading">6.9.2 Know and understand the benefits and drawbacks of data visualisation formats based on:</h3>
+
+        <h4>Type of Data</h4>
+        <ul>
+            <li>Graphs/Charts: Good for numerical trends; not ideal for large textual data.</li>
+            <li>Tables: Precise, suitable for detailed numbers; less visually engaging.</li>
+            <li>Dashboards: Effective for real-time quantitative data; can be overwhelming if cluttered.</li>
+            <li>Infographics: Simplifies complex data; may sacrifice precision for clarity.</li>
+        </ul>
+
+        <h4>Intended Audience</h4>
+        <ul>
+            <li>Specialists: Prefer detailed tables, charts, and dashboards.</li>
+            <li>General public: Prefer infographics and simple charts for easy understanding.</li>
+            <li>Managers/Executives: Dashboards or summary reports with visuals for quick decision-making.</li>
+        </ul>
+
+        <h4>Brief</h4>
+        <ul>
+            <li>Formal reports: Use tables, charts, and graphs with detailed analysis.</li>
+            <li>Marketing/Presentations: Infographics, colorful charts, and dashboards to engage attention.</li>
+            <li>Internal tracking: Dashboards to monitor KPIs and progress effectively.</li>
+        </ul>
+
     </main>
     
     <arrow-Nav>
